# glue-statistics

./: DOCUMENTATION.rst  README.rst  STATSDOCUMENTATION.rst  StatsDataViewer.py  __init__.py  config.py  dataviewertemplate.py  setup.cfg  setup.py  stats_viewer_docs.rst  toolbar.py  viewer_state.ui
StatsDataViewer/: StatsDataViewer.py  StatsViewerState.py  __init__.py  toolbar.py
