[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot
glue.core.data_factories.tests = data/*.jpg
glue.external.pvextractor = LICENSE
glue.viewers.histogram.qt.tests = data/*.glu
glue.viewers.image.qt.tests = data/*.glu, baseline/*.png
glue.viewers.profile.qt.tests = data/*.glu
glue.viewers.scatter.qt.tests = data/*.glu
